[gd_scene load_steps=6 format=2]

[ext_resource path="res://explosion.gd" type="Script" id=1]
[ext_resource path="res://explosion.png" type="Texture" id=2]
[ext_resource path="res://modulate_sprite.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="Animation" id=2]
resource_name = "boom"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.5, 0.5 ), Vector2( 0.85, 0.85 ), Vector2( 1, 1 ), Vector2( 0.85, 0.85 ), Vector2( 0.5, 0.5 ), Vector2( 0.25, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.2, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 2.0, 4.0, 6.0, 8.0, 6.0, 4.0, 2.0 ]
}

[node name="Explosion" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.588235, 0.32549, 0.796078, 1 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
hframes = 2
script = ExtResource( 3 )
modulate_color = "Enviroment"
random = true
random_tick = 0.05

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/boom = SubResource( 2 )

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
[connection signal="body_entered" from="." to="." method="_on_explosion_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
